<resources>
    <string name="app_name">Mukseum</string>
    <string name="input_email_address">Email Address</string>
    <string name="input_password">Password</string>
    <string name="logo_of_the_museum_text">Logo of the Museum</string>
    <string name="sign_in_button_label">Sign In</string>
    <string name="mukseum_logo_text">MUKSEUM</string>
    <string name="not_registered_sign_up_text">Not Registered? Sign Up!</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="already_registered_sign_in_text">Already Registered? Sign In!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_name">Name</string>
    <string name="apply_for_curator">Apply for Curator</string>
    <string name="choose_file">Choose File…</string>
    <string name="register_text_button">Register</string>
    <string name="sign_out">Sign out</string>
    <string name="did_you_know_optional">Did you know? (Optional)</string>
    <string name="artifact_name_required">Artifact Name (Required)</string>
    <string name="artifact_tags_optional">Artifact Tags (Required)</string>
    <string name="upload">Upload</string>
    <string name="add_artifact_button_content_description">Access Artifact Upload Tools</string>
    <string name="cancel_button">Cancel or go back</string>
    <string name="artifact_description_required">Artifact Description (Required)</string>
    <string name="did_you_know_button">Did you know?</string>
    <string name="title">Title</string>
    <string name="owner">Owned by: %s</string>
    <string name="description">Description:\n%s</string>
    <string name="did_you_know">Did you know?</string>
    <string name="tags">Tags: %s</string>
    <string name="lorem_short">Lorem ipsum dolor sit amet</string>
    <string name="lorem_shortest">Lorem ipsum</string>
    <string name="lorem_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vulputate vestibulum enim, sed lacinia nisl auctor eget. Proin sit amet velit libero. Nunc posuere ipsum et velit gravida, vel convallis enim eleifend. Phasellus malesuada nunc ac consequat efficitur. Curabitur eget metus sed lacus dapibus sagittis. In hac habitasse platea dictumst. Integer in nisl ac justo fringilla efficitur. Maecenas volutpat consequat dui, vitae consectetur nunc feugiat in. Cras a ultrices nisl. In finibus elit id ante aliquet iaculis. Nam semper interdum facilisis. Etiam sed nibh turpis. Nulla facilisi. Donec vitae risus et enim malesuada pulvinar eu a lorem. Sed eget venenatis felis. Nunc malesuada condimentum risus vel dictum.
Sed vitae finibus dolor, non cursus tellus. Ut hendrerit facilisis risus. Curabitur nec tristique sem. Mauris feugiat mi nec libero ultricies varius. Aenean vitae malesuada neque. In sit amet arcu a velit bibendum dapibus. Curabitur id congue ligula. Nam id efficitur sem, eget rhoncus odio. Aliquam aliquam dolor sit amet lectus feugiat, et pulvinar quam semper. Cras vel diam at turpis vulputate auctor. Fusce facilisis erat sed mi scelerisque, eu venenatis nunc interdum. Vestibulum facilisis odio sit amet sem feugiat cursus. Sed sodales sapien vel faucibus eleifend. Sed tempus consectetur bibendum. Quisque rhoncus nunc nec ex vestibulum, non ullamcorper risus ultrices. Donec tincidunt sollicitudin malesuada.</string>
    <string name="user">User</string>
    <string name="view_comments_button">View Comments</string>
    <string name="a_full_image_of_the_artifact">A Full Image of the Artifact</string>
    <string name="favorites">Favorites</string>
    <string name="artifacts">Artifacts</string>
    <string name="favorites_recycler_view">A scrollable recycle view of favorites</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="view_curator_application_list">View Curator Application List</string>
    <string name="save_artifact_image_to_gallery">Save Artifact Image to Gallery</string>
    <string name="delete_artifact">Delete Artifact</string>
    <string name="approve">Approve</string>
    <string name="deny">Deny</string>
    <string name="type_a_comment">Type a comment…</string>
    <string name="submit_comment">Submit comment</string>
    <string name="approve_or_deny_comments_in_curator_s_artifacts">Approve or Deny Comments in Curator\'s Artifacts</string>
    <string name="manage_or_edit_artifacts">Manage or Edit Artifacts</string>
    <string name="update">Update</string>
    <string name="saved_artifacts">Saved Artifacts</string>
    <string name="show_artifacts_saved_by_the_current_user">Show Artifacts saved by the current User</string>
</resources>