<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dirty_white">

    <ImageView
        android:id="@+id/sign_up_museum_logo_image_view"
        android:layout_width="320dp"
        android:layout_height="220dp"
        android:layout_marginTop="16dp"
        android:background="#07081d"
        android:contentDescription="@string/logo_of_the_museum_text"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/museum_logo_inverted" />

    <TextView
        android:id="@+id/sign_up_museum_logo_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/mukseum_logo_text"
        android:textColor="#07081d"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/sign_up_museum_logo_image_view"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_museum_logo_image_view"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/sign_up_museum_logo_image_view"
        app:layout_constraintTop_toTopOf="@+id/sign_up_museum_logo_image_view"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/sign_up_edit_text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/register_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/blue_dark"
        android:textColorHint="@color/blue_dark_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_museum_logo_image_view"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/sign_up_edit_text_email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/input_email_address"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/blue_dark"
        android:textColorHint="@color/blue_dark_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_edit_text_name"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/sign_up_edit_text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/blue_dark"
        android:textColorHint="@color/blue_dark_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_edit_text_email_address"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/sign_up_edit_text_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/blue_dark"
        android:textColorHint="@color/blue_dark_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_edit_text_password"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#07081D"
        android:text="@string/sign_up_button_label"
        android:textColor="@color/dirty_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apply_for_curator_switch"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/sign_up_already_registered_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/already_registered_sign_in_text"
        android:textColor="#07081D"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_cancel_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_button" />

    <Switch
        android:id="@+id/apply_for_curator_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:text="@string/apply_for_curator"
        android:textColor="@color/blue_dark"
        android:thumbTint="@color/blue_dark"
        android:trackTint="@color/blue_dark_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.612"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_edit_text_confirm_password"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/sign_up_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_already_registered_text_view" />

    <ImageButton
        android:id="@+id/sign_up_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@null"
        android:contentDescription="@string/cancel_button"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>