<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_dark"
    android:padding="32dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/comments_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_marginTop="8dp"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comment_edit_text">

    </androidx.recyclerview.widget.RecyclerView>

    <ImageButton
        android:id="@+id/comments_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/cancel_button"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <EditText
        android:id="@+id/comment_edit_text"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/comments_background"
        android:clickable="false"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/type_a_comment"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="12dp"
        android:textColorHint="@color/blue_dark_hint"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/comments_recycler_view"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/comments_submit_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@null"
        android:clickable="false"
        android:contentDescription="@string/submit_comment"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:scaleType="centerCrop"
        android:src="@android:drawable/ic_menu_send"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/comment_edit_text"
        app:layout_constraintTop_toTopOf="@+id/comment_edit_text"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>